--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -10,16 +7,22 @@
             "name": "Launch NWjs",
             "nwjsVersion": "any",
             "webRoot": "${workspaceFolder}",
-            "reloadAfterAttached": true
+            "reloadAfterAttached": true,
+            "runtimeExecutable": "F:\\nwjs-sdk-v0.86.0-win-x64\\nwjs-sdk-v0.86.0-win-x64\\nw",
+            "runtimeArgs": [
+                ".",
+                "test&noaudio&webgl"
+            ],
         },
         {
-            "type": "nwjs",
-            "request": "attach",
-            "name": "Attach NWjs",
-            "port": 9222,
-            "nwjsVersion": "any",
-            "webRoot": "${workspaceFolder}",
-            "reloadAfterAttached": true
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "env": {
+                "PYDEVD_CONTAINER_RANDOM_ACCESS_MAX_ITEMS": "1000",
+            }
         }
     ]
 }
